Fixed bottom spacing first page

--- a/docs/css/custom.css
+++ b/docs/css/custom.css
@@ -8,6 +8,7 @@
 #mapdiv_column {
   width: 60%;
   align-items: center;
+  margin-bottom: 70px;
 }
 #col_next2map {
   width: 40%;
